fix dark mode color issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -58,3 +58,7 @@
     --chart-5: 340 75% 55%;
   }
 }
+
+.customLabel label {
+  @apply dark:text-black
+}
