--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,3 @@
     @apply bg-background text-foreground;
   }
 }
-
-.customLabel label {
-  @apply dark:text-black
-}
